# Grupo-4---Base-de-Datos-Avanzado

./: .gitignore  LICENSE  README.md  pyproject.toml  test_deezer.py
backend/: .cache  .env-example  pyproject.toml
backend/apps/music/: serializers.py  urls.py  views.py
backend/apps/music/migrations/: 0001_initial.py  0002_album_music_album_artist__e74ad4_idx_and_more.py  0002_album_popularity.py  0003_rename_spotify_id_album_deezer_id_and_more.py  0003_useralbum.py  0004_userartist.py
backend/apps/music/models/: __init__.py  album.py  userAlbum.py  userArtist.py
backend/apps/music/services/: __init__.py  deezer.py  enrichment.py  songService.py
backend/apps/playlists/: models.py  serializers.py  urls.py  views.py
backend/apps/playlists/migrations/: 0001_initial.py  0002_initial.py  0003_playlist_is_liked_songs_and_more.py
backend/apps/playlists/services/: __init__.py  playlistService.py
backend/apps/users/: serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_delete_userlibrary.py  0002_listeninghistory_users_liste_song_id_4cc726_idx.py  0003_partition_listeninghistory.py  0004_alter_listeninghistory_song_and_more.py  0005_repartition_listeninghistory_columns.py
backend/apps/users/models/: __init__.py  listeningHistory.py  user.py  userLibrary.py
backend/backups/: .gitkeep  backup_2026-06-27_16-06-19.sql  backup_2026-06-27_17-01-50.sql
backend/config/: authentication.py  settings.py  urls.py
backend/database/: partitioning.sql
backend/logs/: .gitkeep
backend/scripts/: backup.py  cli.py  restore.py  utils.py
(+83 files in other folders)
